log-output-split/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: log-output-split-ingress
spec:
  rules:
    - http:
        paths:
          - path: /logs
            pathType: Prefix
            backend:
              service:
                name: log-output-split-svc
                port:
                  number: 80
